--- a/vicman3dev/indexApp/templates/getBlog.html
+++ b/vicman3dev/indexApp/templates/getBlog.html
@@ -21,7 +21,7 @@
 <body>
     <div class="page-header">
         <div class="container">
-            <h1><a href="/">VOVER AL BLOG</a></h1>
+            <h1><a href="/" >HOME</a></h1>
         </div>
     </div>
     <div class="container">
